syntax = "proto3";

package io.harness.pms.contracts.plan;

option java_multiple_files = true;

message ExecutionTriggerInfo {
  TriggerType triggerType = 1;
  TriggeredBy triggeredBy = 2;
}

message TriggeredBy {
  string uuid = 1;
  string identifier = 2;
  map<string, string> extraInfo = 3;
}

enum TriggerType {
  NOOP = 0;
  MANUAL = 1;
  WEBHOOK = 2;
}